--- a/dydy2/about.html
+++ b/dydy2/about.html
@@ -103,6 +103,10 @@
             /*font-size: 1.2rem;*/
             font-weight: 500;
         }
+        #about p {
+            color: rgb(253, 251, 251);
+            background-color: rgb(107, 109, 109);
+        }
     </style>
 </head>
 <body>
@@ -124,6 +128,7 @@
     <!-- About Section -->
     <section id="about">
         <div class="container">
+            <br><br><br>
             <h2>About the Artist</h2>
             <p>Didier Mufa is an accomplished artist known for his vibrant paintings that evoke emotion and wonder. His work explores the beauty of nature, human connection, and the complexities of life. Through his art, he invites you to experience the world from a new perspective.</p>
         </div>
