--- a/dydy2/index.html
+++ b/dydy2/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <br><br><br><br>
-        <p>WELCOME TO MY WORLD</p>
+        <p class="welcome-text">WELCOME TO MY WORLD</p>
     </main>
 
     
